# plates-shells

./: CMakeLists.txt  PyCmd.py  PyPost.py  README.md  bending.cpp  bending.h  bending_derivatives.h  derivatives.cpp  derivatives.h  edge.cpp  edge.h  element.cpp  element.h  geometry.cpp  geometry.h  global.h  hinge.cpp  hinge.h  input.txt  loadbc.cpp  loadbc.h  main.cpp  matlab_post.m  node.cpp  node.h  parameters.cpp  parameters.h  pre_processor.cpp  pre_processor.h  shear_derivatives.cpp  shear_derivatives.h  shearing.cpp  shearing.h  simulation.cpp  simulation.h  solver.cpp  solver.h  stepdata.cpp  stepdata.h  stretch_derivatives.cpp  (+4 more)
include/: arguments.h  bending.h  edge.h  geometry.h  loadbc.h  parameters.h  pre_processor.h  shearing.h  simulation.h  solver.h  stretching.h  type_alias.h  utilities.h
lib/: libiomp5.dylib
src/: bending.cpp  edge.cpp  geometry.cpp  hinge.cpp  loadbc.cpp  main.cpp  parameters.cpp  pre_processor.cpp  shearing.cpp  simulation.cpp  solver.cpp  stretching.cpp
tests/cantilever/: Makefile  loadbc.cpp  pre_processor.cpp
tests/hanging/: loadbc.cpp  pre_processor.cpp
tests/uniaxial/: CMakeLists.txt  loadbc.cpp  pre_processor.cpp
